# suparepo

./: .gitattributes  .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  README.md  package.json
.github/workflows/: ai-code-review.yml  benchmark.yml  ci.yml  deploy-web.yml  pages-docs-supacode-sh.yml  pages-supabit-app.yml  pages-supacode-app.yml  pages-supacode-sh.yml  pages-supaimg-app.yml  pr-dmg.yml  pr-web-preview.yml  release.yml  supaimg-ai-code-review.yml  supaimg-benchmark.yml  supaimg-ci.yml  supaimg-deploy-web.yml  supaimg-pr-dmg.yml  supaimg-pr-web-preview.yml  supaimg-release.yml  supaimg.yml  supareview.yml
apps/docs.supacode.sh/: mdx-components.tsx  next.config.mjs  next.config.ts  package.json  tsconfig.json
apps/supabit.app/: next-env.d.ts  next.config.js  package.json  wrangler.jsonc
apps/supacode.app/: package.json
apps/supacode.sh/: instrumentation-client.ts  next.config.ts  package.json  worker.test.js  wrangler.jsonc
apps/supaimg-desktop/: index.html  output-path-fixtures.json  package.json  settings-schema.json  (+4 more)
apps/supaimg-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.manifest.json  tauri.windows.conf.json
apps/supaimg-desktop/src-tauri/bench_assets/gif/: README.md
apps/supaimg-desktop/src-tauri/capabilities/: default.json
apps/supaimg-desktop/src-tauri/icons/: icon.icns
apps/supaimg-desktop/src-tauri/models/onnxruntime/linux/: libonnxruntime.so.1.22.0
apps/supaimg-desktop/src-tauri/models/onnxruntime/macos/: libonnxruntime.dylib
apps/supaimg-desktop/src-tauri/src/: background_removal.rs  conversion.rs  image_utils.rs  lib.rs  main.rs  model_download.rs  onnx_runtime.rs  settings.rs  text_blur.rs  workflow.rs  workflow_generated.rs
apps/supaimg-desktop/src-tauri/src/compression/: gif.rs  jpeg.rs  mod.rs  output.rs  png.rs  webp.rs
plans/: 0001-move-supaimg-desktop.md  0001-move-supaimg-to-github-releases.md
scripts/: benchmark-baseline.json  benchmark-ci.sh  generate-workflows.ts  install-linux-deps.sh
tools/: generate-settings.mjs
(+110 files in other folders)
